--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
     </section>
     <section class="container row col-md-12 col-lg-12">
       <div class="col-md-8 col-lg-8">
-        <section class="py-5">
+        <section class="py-md-5">
           <div class="container py-4">
             <!-- Home listing -->
             <div class="row align-items-stretch bg-full-left">
               <!-- <div class="col-lg-6 pr-lg-0 order-2 order-lg-1"> -->
                 <div class="h-100 bg-light d-flex align-items-center">
-                  <div class="py-5 pr-4 pl-3">
+                  <div class="py-md-5 pr-4 pl-3">
                     <p class="text-primary font-weight-bold small text-uppercase mb-2">Travel guide</p>
                     <h3 class="h4"> <a class="text-reset" href="post.html">Book to inspire your travel</a></h3>
                     <p class="text-muted text-small mb-3"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quam nobis autem voluptate illum beatae atque suscipit inventore tenetur, perferendis facere sequi optio laudantium obcaecati aliquam, dolores ea. Pariatur, repellendus.</p>
@@ -185,10 +185,10 @@
             </div>
           </div>
       </div>
-      <div class="col-md-4 col-lg-4 py-5">
+      <div class="col-md-4 col-lg-4 py-md-5">
         <section class="container py-4">
           <div class="header">
-            <h2 class="text-primary">UPCOMING EVENTS- </h2>
+            <h2 class="text-primary header-text-responsive">UPCOMING EVENTS- </h2>
           </div>
           <div class="swiper-container mySwiper container">
             <marquee behavior="scroll" direction="up"onmouseover="this.stop();"onmouseout="this.start();"scrollamount="2" class="swiper-wrapper">
@@ -282,9 +282,9 @@
         </section>
       </div>
     </section>
-    <section class="blog-container py-3 mt-2">
-        <div class="heading text-center">
-          <h2 class="text-uppercase">Popular Blogs</h2>
+    <section class="blog-container py-3 mt-md-2">
+        <div class="heading text-center blogs-section-header">
+          <h2 class="text-uppercase header-text-responsive text-primary">Popular Blogs</h2>
         </div>
         <div class="row blogs container-fluid mt-3">
           <a href="" class="single-blog-container text-decoration-none text-reset">
