Add Photoes Gallery Section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </a>
         </div>
     </section>
-    <section class="container row col-md-12 col-lg-12">
+    <section class="container row col-md-12 col-lg-12 col-sm-12">
       <div class="col-md-8 col-lg-8">
         <section class="py-md-5">
           <div class="container py-4">
@@ -288,10 +288,10 @@
         </div>
         <div class="row blogs container-fluid mt-3">
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 1.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 1.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -303,10 +303,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 2.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 2.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -318,10 +318,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 3.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 3.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -333,10 +333,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 4.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 4.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -348,10 +348,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 5.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 5.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -363,10 +363,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 6.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 6.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -378,10 +378,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 7.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 7.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -393,10 +393,10 @@
             </div>
           </a>
           <a href="" class="single-blog-container text-decoration-none text-reset">
-            <div class="col-md-3 col-lg-3 col-sm-6">
+            <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
-                  <img class="card-img-top shadow" src="Images/Blog_images/blog/Blog Banner 8.jpg" alt="Card image cap">
+                  <img class="card-img-top shadow img-fluid mx-auto" src="Images/Blog_images/blog/Blog Banner 8.jpg" width="100%" alt="Card image cap">
                 </div>
                 <div class="blog-info">
                   <div class="card-body">
@@ -409,6 +409,71 @@
           </a>
         </div>
     </section>
+    <section>
+      <div class="container img-gallery-heading text-center text-uppercase text-primary">
+        <h2>Photoes Gallery</h2>
+      </div>
+      <div class="img-gallery-wrapper">
+        <div class="gallery">
+            <div class="gallery__item gallery__item--1">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 1.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+            <div class="gallery__item gallery__item--2">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 2.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+            <div class="gallery__item gallery__item--3">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 3.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+            <div class="gallery__item gallery__item--4">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 4.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+            <div class="gallery__item gallery__item--5">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 5.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+            <div class="gallery__item gallery__item--6">
+                <a href="#" class="gallery__link">
+                    <img src="Images/Blog_images/blog/Blog Banner 6.jpg" class="gallery__image" />
+                    <div class="gallery__overlay">
+                        <span>Lorem ipsum dolor sit.</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+      </div>
+    </section>
+    <footer class="bg-dark text-gray py-3">
+      <div class="copyright-text container">
+        <p class="text-center">&copy; Bon Voyage</p>
+      </div>
+      <div class="developer-info text-right container">
+        <p class="small">Designed by <a class="text-reset" href="">Apps Valley</a></p>
+      </div>
+    </footer>
 
 
     <!-- jQuery library -->
