--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
               <div class="btn btn-primary btn-block destination-btn text-white">Discover</div>
             </div>
           </a>
-            
           <a class="destination d-flex align-items-end bg-center bg-cover" href="#" style="background: url(Images/Continents/North\ America.jpg)">
             <div class="destination-inner w-100 text-center text-white index-forward has-transition">
               <!-- <p class="small text-uppercase mb-0"></p> -->
@@ -169,7 +168,7 @@
                 <div class="h-100 bg-light d-flex align-items-center">
                   <div class="py-md-5 pr-4 pl-3">
                     <p class="text-primary font-weight-bold small text-uppercase mb-2">Travel guide</p>
-                    <h3 class="h4"> <a class="text-reset" href="post.html">Book to inspire your travel</a></h3>
+                    <h3 class="h4"> <a class="text-reset" href="./blog.html">Book to inspire your travel</a></h3>
                     <p class="text-muted text-small mb-3"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi quam nobis autem voluptate illum beatae atque suscipit inventore tenetur, perferendis facere sequi optio laudantium obcaecati aliquam, dolores ea. Pariatur, repellendus.</p>
                     <ul class="list-inline small text-uppercase mb-0">
                       <!-- <li class="list-inline-item align-middle"><img class="rounded-circle shadow-sm" src="file:///C:/Users/TULY%20AKTER/Downloads/travel/distribution/img/person-1.jpg" alt="" width="30"/></li> -->
@@ -181,7 +180,6 @@
                   </div>
                 </div>
               <!-- </div> -->
-              <div class="col-lg-6 pl-lg-0 order-1 order-lg-2"><a class="d-block h-100 bg-center bg-cover" href="post.html" style="background: url(img/travel-home-divider.jpg)"></a></div>
             </div>
           </div>
       </div>
@@ -287,7 +285,7 @@
           <h2 class="text-uppercase header-text-responsive text-primary">Popular Blogs</h2>
         </div>
         <div class="row blogs container-fluid mt-3">
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -296,13 +294,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -311,13 +309,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -326,13 +324,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -341,13 +339,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -356,13 +354,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -371,13 +369,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -386,13 +384,13 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
             </div>
           </a>
-          <a href="" class="single-blog-container text-decoration-none text-reset">
+          <a href="./blog.html" class="single-blog-container text-decoration-none text-reset">
             <div class="col-md-4 col-lg-3 col-xl-3 col-sm-6 col-xs-12">
               <div class="card blog-wrapper">
                 <div class="inner">
@@ -401,7 +399,7 @@
                 <div class="blog-info">
                   <div class="card-body">
                     <h5 class="card-title text-left">Ultimate choice of travelers: Discover the World largest mangrove- Sundarbans </h5>
-                    <a href="#">Read more. . .</a>
+                    <a href="./blog.html">Read more. . .</a>
                   </div>
                 </div>
               </div>
@@ -409,7 +407,7 @@
           </a>
         </div>
     </section>
-    <section>
+    <section id="img-gallery">
       <div class="container img-gallery-heading text-center text-uppercase text-primary">
         <h2>Photoes Gallery</h2>
       </div>
@@ -489,22 +487,5 @@
     <!-- Custom JS -->
     <script src="Frontend/Js/continents_slide.js"></script>
     <script src="Frontend/Js/app.js"></script>
-    <script>
-            var swiper = new Swiper(".mySwiper", {
-        direction: "vertical",
-        mousewheel: false,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        slidesPerView: 1,
-        spaceBetween: 30,
-        loop: false,
-        // autoplay: {
-        //   delay: 2500,
-        //   disableOnInteraction: false,
-        // },
-      });
-    </script>
 </body>
 </html>
